--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-fileupload": "^1.4.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "npm": "^8.14.0"
   },
