--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "express": "^4.18.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "mkdirp": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "npm": "^8.14.0"
+    "npm": "^8.14.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
