--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs-extra": "^10.1.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
